# katalogue

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  katalogue.desktop  org.kde.katalogue.desktop  org.kde.katalogue.json  org.kde.katalogue.metainfo.xml
android/: AndroidManifest.xml
aur/: .SRCINFO  PKGBUILD
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  database.cpp  database.h  itemModel.cpp  itemModel.h  katalogue.cpp  katalogueconfig.kcfg  katalogueconfig.kcfgc  main.cpp  resources.qrc  version-katalogue.h
src/constants/: defaults.cpp  defaults.h
src/contents/sheets/: AttributeInfoSheet.qml  EventInfoSheet.qml
src/contents/ui/: About.qml  AddEditAttributePage.qml  AddEditDocumentPage.qml  AddEditEventPage.qml  AddEditItemPage.qml  AddEditNotePage.qml  AddEditTaskPage.qml  AddItem.qml  AddItemPage.qml  Archive.qml  Attributes.qml  Components.qml  Details.qml  Documents.qml  EditItemPage.qml  Events.qml  ItemInfoPage.qml  Items.qml  Notes.qml  Overview.qml  Tasks.qml  items.qml  main.qml
src/contents/ui/sheets/: AddAttributeSheet.qml  AddEventSheet.qml  AddItemSheet.qml
src/data/: CMakeLists.txt  attribute.cpp  attribute.h  attributeDatabase.cpp  attributeDatabase.h  database.cpp  database.cpp.bak  database.h  database.h.bak  databaseInit.cpp  databaseInit.h  databaseSchema.h  databaseUtils.cpp  databaseUtils.h  documentDatabase.cpp  documentDatabase.h  event.cpp  event.h  eventDatabase.cpp  eventDatabase.h  item.cpp  item.h  itemDatabase.cpp  itemDatabase.h  note.cpp  note.h  noteDatabase.cpp  noteDatabase.h  sync.cpp  sync.h  task.cpp  task.h  taskDatabase.cpp  taskDatabase.h  todo.cpp  todo.h
src/data/entries/: attribute.cpp  attribute.h  entry.h  event.cpp  event.h  item.cpp  item.h  note.cpp  note.h  task.cpp  task.h
src/entries/: CMakeLists.txt  attribute.cpp  attribute.h  document.h  entry.cpp  entry.h  entryFactory.h  event.cpp  event.h  item.cpp  item.h  note.cpp  note.h  task.cpp  task.h
src/models/: attributeCategoryModel.cpp  attributeCategoryModel.h  attributeModel.cpp  attributeModel.h  componentModel.cpp  componentModel.h  documentModel.cpp  documentModel.h  eventCategoryModel.cpp  eventCategoryModel.h  eventModel.cpp  eventModel.h  filterProxyModel.cpp  filterProxyModel.h  itemArchiveModel.cpp  itemArchiveModel.h  itemComponentModel.cpp  itemComponentModel.h  itemModel.cpp  itemModel.h  itemModelFactory.h  itemParentModel.cpp  itemParentModel.h  itemTypeModel.cpp  itemTypeModel.h  noteModel.cpp  noteModel.h  searchFilterProxyModel.cpp  searchFilterProxyModel.h  taskModel.cpp  taskModel.h  uniqueValueModel.cpp  uniqueValueModel.h  uniqueValueModelFactory.h
src/utils/: CMakeLists.txt  documentIOHelper.cpp  documentIOHelper.h
test/: CMakeLists.txt  databaseTest.cpp  main.cpp
tests/: CMakeLists.txt  attributeDatabaseTest.cpp  databaseAttributeTest.cpp  databaseEventTest.cpp  databaseItemTest.cpp  databaseNoteTest.cpp  databaseTaskTest.cpp  databaseTest.cpp  documentDatabaseTest.cpp  eventDatabaseTest.cpp  itemDatabaseTest.cpp  noteDatabaseTest.cpp  taskDatabaseTest.cpp
